Majors changes in updating with ajax

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,7 +1,12 @@
 /*
  *
  *= require_self
- *
+ *= require jquery.minicolors
  */
 @import 'foundation';
 @import 'foundation-icons';
+
+body{
+  display:none;
+}
+
